--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-# Done to increase the memory available to gradle.
+# メモリ設定
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+# https://fabricmc.net/develop で最新バージョン確認推奨
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.5
+loader_version=0.14.22
 
 # Mod Properties
 mod_version=1.0.0
@@ -14,4 +14,5 @@ maven_group=com.example
 archives_base_name=modid
 
 # Dependencies
-fabric_version=0.119.5+1.21.5
+fabric_version=0.72.0+1.19.2
+loom_version=0.12.0
