--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,7 @@
-buildscript {
-    repositories {
-        maven {
-            url = 'https://maven.fabricmc.net/'
-        }
-        mavenCentral()
-        gradlePluginPortal()
-    }
-    dependencies {
-        classpath 'net.fabricmc:fabric-loom:0.12.65'  // ←安定版バージョンを指定
-    }
+plugins {
+    id 'fabric-loom' version '0.12.15'
+    id 'maven-publish'
 }
-
-apply plugin: 'fabric-loom'
-apply plugin: 'maven-publish'
 
 version = project.mod_version
 group = project.maven_group
@@ -63,4 +52,16 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+tasks.withType(Jar) {
+	manifest {
+		attributes(
+			"Specification-Title": project.archives_base_name,
+			"Specification-Version": project.mod_version,
+			"Specification-Vendor": "FabricMC",
+			"Implementation-Title": project.archives_base_name,
+			"Implementation-Version": project.mod_version,
+			"Implementation-Vendor": "FabricMC"
+		)
+	}
 }
